--- a/ProyectoSeconds/src/application/Layout.fxml
+++ b/ProyectoSeconds/src/application/Layout.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,11 +15,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="500.0" styleClass="mypane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OneController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="500.0">
          <center>
-            <GridPane BorderPane.alignment="CENTER">
+            <GridPane styleClass="mypane" BorderPane.alignment="CENTER">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -32,18 +35,33 @@
                      <image>
                         <Image url="@CChannel.png" />
                      </image></ImageView>
-                  <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
-                        <Label text="School of AID" />
-                        <Label text="neep help?" />
+                        <Label alignment="CENTER" styleClass="mytitle" text="School of AID" textFill="#f2e9e9" />
+                        <Label alignment="CENTER" style="-fx-underline: true; -fx-font-style: italic;" text="neep help?" textFill="#e1c9c9">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                           <opaqueInsets>
+                              <Insets top="10.0" />
+                           </opaqueInsets></Label>
                      </children>
                   </VBox>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <children>
-                        <HBox layoutX="53.0" layoutY="53.0" prefHeight="53.0" prefWidth="111.0" spacing="10.0">
+                        <HBox layoutX="53.0" layoutY="53.0" prefHeight="75.0" prefWidth="111.0" spacing="10.0" stylesheets="@application.css">
                            <children>
-                              <Button mnemonicParsing="false" style="-fx-background-color: orange;" text="DIE" textFill="#f8f7f7" />
-                              <Button mnemonicParsing="false" style="-fx-background-color: orange;" text="LIVE" textFill="#fcfafa" />
+                              <Button mnemonicParsing="false" onAction="#handleClose" styleClass="mybutton" text="DIE" textFill="#f8f7f7">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
+                              <Button mnemonicParsing="false" onAction="#showSendProfile" prefHeight="0.0" prefWidth="40.0" style="-fx-background-color: orange; -fx-text-fill: white;" text="LIVE" textFill="#fcfafa">
+                                 <effect>
+                                    <DropShadow blurType="TWO_PASS_BOX" color="#8d7b31" />
+                                 </effect>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
                            </children>
                         </HBox>
                      </children>
